Bug 131898 - LibreOffice dialog: File name field filled with filename, type, size and modified date when selecting a file in the browser
Summary: LibreOffice dialog: File name field filled with filename, type, size and modi...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0 target:6.4.4
Keywords: bibisected, bisected, regression
: 130127 132159 (view as bug list)
Depends on:
Blocks: LO-File-Dialog
  Show dependency treegraph
 
Reported: 2020-04-05 10:22 UTC by Brendon
Modified: 2020-05-10 01:34 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the bug (28.78 KB, image/png)
2020-04-05 10:26 UTC, Brendon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Brendon 2020-04-05 10:22:03 UTC
Description:
In the file dialog, when a file is selected in the browser, the "File name" field shows too much information when it should just show the filename. I think it  simply copies *all* the fields from the browser.

Obviously trying to save or load a document (of any sort) with that as its filename won't work.

Steps to Reproduce:
1. Start a fresh instance of LibreOffice, launch Writer.

2. Save the blank document that appears to somewhere (via "Save As...").

3A. Do step 2 again, but this time clear the "File name" field, then select the newly written document file in the browser.

3B. OR restart Writer, then File->Open..., select the document file in the browser.

Actual Results:
"File name" field contains:
<filename> <type> <size> <date modified>

e.g. Document.odt OpenDocument Text 1234 Bytes 01/01/2000, 00:00

Expected Results:
"File name" field should contain:
<filename>

e.g. Document.odt


Reproducible: Always


User Profile Reset: Yes



Additional Info:
I remember when I was updating my libreoffice package to the current version, I notice that GTK+ 2 isn't needed anymore, according to my package manager. I'm not sure what widget toolkit you guys are using now.

Debian 10.3 "Buster" with XFCE 4.14 desktop environment. libreoffice package from stable.

Version: 6.4.1.2
Build ID: 1:6.4.1-1
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Brendon 2020-04-05 10:26:46 UTC
Created attachment 159338 [details]
Screenshot showing the bug
Comment 2 Timur 2020-04-16 19:31:03 UTC
I guess this is in LibreOffice dialog, not system. 
In that case, also repro in Windows in 6.4 and 7.0+. 
Regression, like bug 130505.
Comment 3 Timur 2020-04-16 19:31:55 UTC
*** Bug 132159 has been marked as a duplicate of this bug. ***
Comment 4 Buovjaga 2020-05-03 10:18:32 UTC
I am bibisecting this
Comment 5 Buovjaga 2020-05-03 10:25:39 UTC
Bibisected with linux64-6.4 to https://git.libreoffice.org/core/+/09e3d45cdc5c739e5246388a83ccfc6d76bf66e9^!/

weld fpicker cluster

Adding Cc: to Caolán McNamara

This is still seen after the fix for bug 130505

Step 2 in the description is not required, one can just File -> Open and select any file
Comment 6 Ming Hua 2020-05-03 11:30:32 UTC
For Linux there is also bug 130127, but it claims to be x11 VCL specific, and Kevin there said it's reproducible in 5.4.  So I'm not sure if it's the same issue.
Comment 7 Buovjaga 2020-05-03 11:53:13 UTC
*** Bug 130127 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2020-05-03 15:45:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9a87be305520d91085859ddacdf45e373efb5426

Resolves: tdf#131898 we only want the text from column 0

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2020-05-03 15:46:26 UTC
fixed in master, backport to 6-4 in gerrit
Comment 10 Commit Notification 2020-05-03 17:02:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/15eb7d3197e290efd3f2c43973c033dc754416c2

Resolves: tdf#131898 we only want the text from column 0

It will be available in 6.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Buovjaga 2020-05-03 18:10:18 UTC
Thanks, verified!

Arch Linux 64-bit
Version: 7.0.0.0.alpha0+
Build ID: 9a87be305520d91085859ddacdf45e373efb5426
CPU threads: 8; OS: Linux 5.6; UI render: default; VCL: kf5; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 3 May 2020
Comment 12 Commit Notification 2020-05-05 09:06:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4-4":

https://git.libreoffice.org/core/commit/8f7832d467c646cd6cabfcb92f773072461a7cec

Resolves: tdf#131898 we only want the text from column 0

It will be available in 6.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.