Resolves: tdf#131898 we only want the text from column 0

in the fallback file picker

Change-Id: I60527661f83fde135145249a14b4f3b35840fff8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93347
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>